Category views, reverse() for dynamic urls, category dropdwon.

--- a/store/templates/store/all-products.html
+++ b/store/templates/store/all-products.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %} {% block content %} 
-{% include 'inlcudes/nabar.html' %}
+{% include 'includes/navbar.html' %}
 
 <section>
   <div class="bg-white">
