--- a/users/templates/users/manage-account/account.html
+++ b/users/templates/users/manage-account/account.html
@@ -39,7 +39,7 @@
                   </div>
 
                   <div class="">
-                    <a class="py-2 px-2 bg-gray-100 rounded hover:bg-gray-400" href="{% url 'manage-account' %}">Edit Information</a>
+                    <a class="py-2 px-2 bg-gray-100 rounded hover:bg-gray-400" href="{% url 'users:manage-account' %}">Edit Information</a>
                   </div>
           
                   
