--- a/core/templates/includes/navbar.html
+++ b/core/templates/includes/navbar.html
@@ -1061,7 +1061,7 @@
             <div id="cart-dropdown" class="hidden absolute inset-x-0 mt-px bg-gray-100 pb-6 shadow-lg sm:px-2 lg:top-full lg:left-auto lg:right-5 lg:-mr-1.5 lg:w-80 lg:rounded-lg lg:ring-1 lg:ring-black lg:ring-opacity-5">
               <h2 class="sr-only">Shopping Cart</h2>
 
-              <form class="mx-auto max-w-2xl px-4">
+              <div class="mx-auto max-w-2xl px-4">
                 <!-- FOR LOOP HERE -->
                 <ul role="list" class="divide-y divide-gray-200">
                   {% for item in items %}
@@ -1079,9 +1079,14 @@
                   {% endfor %}
                 </ul>
                 <!-- END LOOP -->
-                <button type="submit" class="w-full rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50">Checkout</button>
-                
-              </form>
+
+              </div>
+              <div class="w-full flex justify-center">
+                <a href="{% url 'store_basket:basket-summary' %}" class="w-full flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50">Checkout</a>
+
+              </div>
+
+             
             </div>
 
             <div>
