--- a/core/templates/base/base.html
+++ b/core/templates/base/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
     {% tailwind_css %}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
   
   </head>
