--- a/store/templates/store/products/product-detail.html
+++ b/store/templates/store/products/product-detail.html
@@ -39,185 +39,63 @@
           <p class="text-3xl tracking-tight text-gray-900">
             ${{ product.price }}
           </p>
+      
         </div>
+        {% if product.best_seller == True %}
+        <p class="pt-3 text-gray-600">Best seller</p>
+        {% endif %}
 
-        <!-- Reviews -->
-        <div class="mt-3">
-          <h3 class="sr-only">Reviews</h3>
-          <div class="flex items-center">
-            <div class="flex items-center">
-              <!--
-                  Heroicon name: mini/star
-  
-                  Active: "text-indigo-500", Inactive: "text-gray-300"
-                -->
-              <svg
-                class="h-5 w-5 flex-shrink-0 text-indigo-500"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                  clip-rule="evenodd"
-                />
-              </svg>
+         <!-- ADD TO BASKET -->
 
-              <!-- Heroicon name: mini/star -->
-              <svg
-                class="h-5 w-5 flex-shrink-0 text-indigo-500"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-
-              <!-- Heroicon name: mini/star -->
-              <svg
-                class="h-5 w-5 flex-shrink-0 text-indigo-500"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-
-              <!-- Heroicon name: mini/star -->
-              <svg
-                class="h-5 w-5 flex-shrink-0 text-indigo-500"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-
-              <!-- Heroicon name: mini/star -->
-              <svg
-                class="h-5 w-5 flex-shrink-0 text-gray-300"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-            </div>
-            <p class="sr-only">4 out of 5 stars</p>
+         <div class="flex justify-between">
+          <div class="py-3">
+            <label class="pr-4">Quantity</label>
+            <select id="quanitity-select" class="rounded-md">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
           </div>
+          
+          <div class="py-3">
+            <button id="add-button" value="{{ product.id }}" type="button" class="w-full flex justify-center items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Add to basket</button>
+          </div>
+
         </div>
 
         <div class="mt-6">
           <h3 class="sr-only">Description</h3>
-
-          <div class="space-y-6 text-base text-gray-700">
-            <p>{{ product.description }}</p>
-          </div>
         </div>
 
-        <section aria-labelledby="details-heading" class="mt-12">
+        <section aria-labelledby="details-heading">
           <h2 id="details-heading" class="sr-only">Additional details</h2>
 
           <div class="divide-y divide-gray-200 border-t">
             <div>
               <h3>
-                <!-- Expand/collapse question button -->
-                <button
-                  type="button"
-                  class="group relative flex w-full items-center justify-between py-6 text-left"
-                  aria-controls="disclosure-1"
-                  aria-expanded="false"
-                >
-                  <!-- Open: "text-indigo-600", Closed: "text-gray-900" -->
-                  <span class="text-gray-900 text-sm font-medium"
-                    >Features</span
-                  >
-                  <span class="ml-6 flex items-center">
-                    <!--
-                        Heroicon name: outline/plus
-  
-                        Open: "hidden", Closed: "block"
-                      -->
-                    <svg
-                      class="block h-6 w-6 text-gray-400 group-hover:text-gray-500"
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      aria-hidden="true"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M12 4.5v15m7.5-7.5h-15"
-                      />
-                    </svg>
-                    <!--
-                        Heroicon name: outline/minus
-  
-                        Open: "block", Closed: "hidden"
-                      -->
-                    <svg
-                      class="hidden h-6 w-6 text-indigo-400 group-hover:text-indigo-500"
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      aria-hidden="true"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M19.5 12h-15"
-                      />
-                    </svg>
-                  </span>
-                </button>
+          
+
               </h3>
-              <div class="prose prose-sm pb-6" id="disclosure-1">
-                <ul role="list">
-                  <li>Multiple strap configurations</li>
-
-                  <li>Spacious interior with top zip</li>
-
-                  <li>Leather handle and tabs</li>
-
-                  <li>Interior dividers</li>
-
-                  <li>Stainless strap loops</li>
-
-                  <li>Double stitched construction</li>
-
-                  <li>Water-resistant</li>
-                </ul>
+              <div class="pt-2 pb-6" id="disclosure-1">
+                <div class="space-y-6 text-base text-gray-700 pb-5">
+                  <p class="text-lg text-black font-medium">Description</p>
+                  <p>{{ product.description }}</p>
+                </div>
+                <div class="divide-y divide-gray-200 border-b">
+                  <div>
+        
               </div>
             </div>
 
-            <!-- More sections... -->
+           
+
+            
+
+
+
+
           </div>
         </section>
       </div>
@@ -253,7 +131,7 @@
               <h3 class="mt-4 text-sm text-gray-700">
                 <a href="{{ product.get_absolute_url }}">
                   <span aria-hidden="true" class="absolute inset-0"></span>
-                  {{ p.title }}
+                  {{ product.title }}
                 </a>
               </h3>
               <p class="mt-1 text-sm text-gray-500">{{ product.type|title }}</p>
@@ -262,6 +140,7 @@
               ${{ product.price }}
             </p>
           </div>
+       
         </div>
         {% endfor %}
       </div>
