--- a/core/templates/includes/navbar.html
+++ b/core/templates/includes/navbar.html
@@ -1030,8 +1030,8 @@
               class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6"
             >
 
-             <!-- CART -->
-             <div id="cart" class="ml-4 flow-root lg:ml-6">
+             <!-- BASKET -->
+             <div id="basket" class="ml-4 flow-root lg:ml-6">
               <a href="#" class="group -m-2 flex items-center p-2">
                 <!-- Heroicon name: outline/shopping-bag -->
                 <svg
@@ -1058,7 +1058,7 @@
             </div>
             
             <!-- CART DROPDOWN -->
-            <div id="cart-dropdown" class="hidden absolute inset-x-0 mt-px bg-gray-100 pb-6 shadow-lg sm:px-2 lg:top-full lg:left-auto lg:right-5 lg:-mr-1.5 lg:w-80 lg:rounded-lg lg:ring-1 lg:ring-black lg:ring-opacity-5">
+            <div id="basket-dropdown" class="hidden absolute inset-x-0 mt-px bg-gray-100 pb-6 shadow-lg sm:px-2 lg:top-full lg:left-auto lg:right-5 lg:-mr-1.5 lg:w-80 lg:rounded-lg lg:ring-1 lg:ring-black lg:ring-opacity-5">
               <h2 class="sr-only">Shopping Cart</h2>
 
               <div class="mx-auto max-w-2xl px-4">
