--- a/store/templates/store/products/product-detail.html
+++ b/store/templates/store/products/product-detail.html
@@ -2,7 +2,7 @@
 <div>
 {% include 'includes/navbar.html' %}
 
-<div class="bg-white">
+<div class="bg-white escape">
   <div
     class="mx-auto max-w-2xl py-16 px-4 sm:py-5 sm:px-6 lg:max-w-7xl lg:px-8"
   >
@@ -47,21 +47,25 @@
 
          <!-- ADD TO BASKET -->
 
-         <div class="flex justify-between">
-          <div class="py-3">
-            <label class="pr-4">Quantity</label>
-            <select id="quanitity-select" class="rounded-md">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
-          </div>
-          
-          <div class="py-3">
-            <button id="add-button" value="{{ product.id }}" type="button" class="w-full flex justify-center items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Add to basket</button>
-          </div>
+         <form>
+          <div class="flex justify-between">
+            <div class="py-3">
+              <label class="pr-4">Quantity</label>
+              <select id="quanitity-select" class="rounded-md">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+              </select>
+            </div>
+            
+            <div class="py-3">
+              <button id="add-btn" data-product="{{product.id}}" data-action="add" class="w-full flex justify-center items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Add to basket</button>
+            </div>
+         </form>
+
+        
 
         </div>
 
