--- a/store/templates/store/products/product-detail.html
+++ b/store/templates/store/products/product-detail.html
@@ -47,7 +47,8 @@
 
          <!-- ADD TO BASKET -->
 
-         <form>
+        
+     
           <div class="flex justify-between">
             <div class="py-3">
               <label class="pr-4">Quantity</label>
@@ -61,9 +62,9 @@
             </div>
             
             <div class="py-3">
-              <button id="add-btn" data-product="{{product.id}}" data-action="add" class="w-full flex justify-center items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Add to basket</button>
+              <button id="add-btn" data-product="{{product.id}}" data-action="add" class="w-full add-btn flex justify-center items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Add to basket</button>
             </div>
-         </form>
+       
 
         
 
